--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -25,7 +25,7 @@ code {
 .App {
   width: 100%;
   min-height: 100vh;
-  background: white;
+  background: linear-gradient(#e66465, #9198e5);
 }
 
 .main {
@@ -33,3 +33,6 @@ code {
   width: 100%;
   margin: auto;
 }
+
+/*----Auth CSS----*/
+@import url('./styles/auth.css');
