--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -25,13 +25,12 @@ code {
 .App {
   width: 100%;
   height: 100vh;
-  background-image: url(https://preview.redd.it/oe901qo4hth61.png?width=3840&format=png&auto=webp&s=eac9b8f429cf2d88a84ed865b6ee5493ff452dcb);
+  background-color: #fff;
   background-size: cover;
   background-position: center;
 }
 
 .main {
-  max-width: 1000px;
   width: 100%;
   margin: auto;
 }
