--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -14,20 +14,10 @@ code {
     monospace;
 }
 
-#theme {
-  display: none;
-}
-
-#theme:checked ~ .App {
-  filter: invert(1);
-}
-
 .App {
-  width: 100%;
-  height: 100vh;
-  background-color: #fff;
-  background-size: cover;
-  background-position: center;
+  max-width: 100%;
+  min-height: 100vh;
+  margin: 0 auto;
 }
 
 .main {
@@ -35,10 +25,11 @@ code {
   margin: auto;
 }
 
-/*----Auth CSS----*/
+/*---------------Auth CSS---------------*/
 @import url('./styles/auth.css');
-/*----Error CSS----*/
+/*---------------Error CSS---------------*/
 @import url('./styles/error.css');
-/*----Home CSS----*/
+/*---------------Home CSS---------------*/
 @import url('./styles/home.css');
-
+/*---------------Avatar CSS---------------*/
+@import url('./styles/avatar.css');
