Done update post and update view home

--- a/front-end/src/pages/homePage/postItem/chipCategory.css
+++ b/front-end/src/pages/homePage/postItem/chipCategory.css
@@ -1,9 +1,10 @@
 .chip {
     font-size: 0.8rem;
-    background: linear-gradient(to right, #0647be, #a7bfe8);
+    background: linear-gradient(to right, #335fb1, #a7bfe8);
     color: #fff;
     padding: 0.3rem 0.5rem;
     border-radius: 5px;
     width: fit-content;
     text-transform: capitalize;
+    margin: 0rem 0 0.4rem 0.7rem;
   }
