--- a/front-end/src/pages/homePage/postItem/postItem.css
+++ b/front-end/src/pages/homePage/postItem/postItem.css
@@ -1,21 +1,61 @@
 .postItem-wrap {
     display: flex;
     flex-direction: column;
+    box-shadow: 0 0 12px #ddd;
+    border-radius: 4px
   }
-  .postItem-cover {
+
+  .postItem-wrap .nav-item {
+    margin-top: -57px;
+    margin-bottom: -10px;
+    cursor: pointer;
+  }
+
+  .postItem-wrap .nav-item .dropdown-item {
+    display: flex;
+    margin : 5px 0
+  }
+
+ .carousel  {
     width: 100%;
-    height: 230px;
-    object-fit: cover;
-    border-radius: 35px;
     margin-bottom: 0.6rem;
   }
+
+.carousel-inner{
+  border-radius: 4px;
+  width: 100%;
+}
+
+.postItem-wrap small{
+  margin: 0rem 0 0rem 0.7rem;
+}
+
   .postItem-wrap h3 {
-    margin: 0.3rem 0 1rem 0;
+    margin: 0.1rem 0 0.6rem 0.7rem;
     flex: 1;
     color: rgb(43, 41, 41);
   }
-  
-  .postItem-desc {
+
+  .postItem-wrap .info {
+    position: relative;
+    margin: -3.2rem 0 0rem -0.2rem;
+    max-height: 1px;
+    overflow: hidden;
+    font-size: 0.9rem;
+    color: #3b3535;
+  }
+
+  .postItem-wrap i {
+    margin: 0rem 0 1rem 0.8rem;
+    flex: 1;
+    font-size: 16px;
+  }
+
+  .postItem-wrap .cmt {
+    margin: 0rem 0 1rem 0.7rem;
+    flex: 1;
+  }
+  /* .postItem-desc {
     position: relative;
     max-height: 49px;
     overflow: hidden;
@@ -29,6 +69,6 @@
     content: '....';
     bottom: 0;
     right: 10px;
-  }
+  } */
   
   
