--- a/front-end/src/pages/homePage/postItem/postItem.css
+++ b/front-end/src/pages/homePage/postItem/postItem.css
@@ -26,6 +26,12 @@
   width: 100%;
 }
 
+.carousel img {
+  display: block;
+  width: 100%;
+  height: 280px;
+}
+
 .postItem-wrap small{
   margin: 0rem 0 0rem 0.7rem;
 }
