--- a/front-end/src/styles/profile.css
+++ b/front-end/src/styles/profile.css
@@ -100,3 +100,53 @@
     cursor: pointer;
     opacity: 0;
 }
+/*--------------------------User Posts-------------------------*/
+.showPost{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    justify-content: center;
+    grid-gap: 10px;
+    overflow: hidden;
+    margin: 15px 0;
+}
+.showPost_display{
+    min-width: 350px;
+    height: 350px;
+    width: 100%;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.showPost_display img{
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+}
+
+.showPost_display .showPost_comment{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background: #0008;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: 0.5s;
+}
+.showPost_display:hover .showPost_comment{
+    opacity: 10;
+}
+.showPost_display .showPost_comment i{
+    font-size: 1.6rem;
+    color: #fff
+}
+
+
+
+
