Fix and update chat

--- a/front-end/src/styles/chat.css
+++ b/front-end/src/styles/chat.css
@@ -7,8 +7,9 @@
 }
 .chat_search{
     background-color: #f0f0f0;
-    padding: 0.6rem;
+    padding: 0.7rem 0.6rem 0.7rem 0.6rem;
     border-radius: 12px;
+    margin-top: 6px;
     margin-right: 9%;
 }
 .chat_search form {
