--- a/front-end/src/styles/chat.css
+++ b/front-end/src/styles/chat.css
@@ -35,3 +35,71 @@
     background-color: #5788d1;
     color: #fff;
   }
+/* --------------------Chat Input------------------- */
+
+.chat_input{
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid #ddd;
+}
+.chat_input input{
+  width: 100%;
+  height: 42px;
+  outline: none;
+  border: none;
+}
+.chat_input button{
+  border: none;
+  outline: none;
+  background-color: #fff
+}
+/* ------------------Chat Container----------------- */
+.chat_container{
+  width: 100%;
+  height: calc(100% - 120px);
+  padding: 5px 12px;
+  overflow-y: auto
+}
+.chat_showmessage{
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.chat_row{
+  display: grid;
+  grid-template-columns: 70%;
+  margin-bottom: 10px
+}
+.my_showmessage{
+  justify-content: end;
+  justify-items: end;
+}
+
+.another_showmessage{
+  justify-content: start;
+  justify-items: start;
+}
+/* ------------------Show message ----------------- */
+.chat_content{
+  padding: 6px 12px;
+  margin-bottom: 5px;
+}
+.chat_time{
+  font-size: 12px;
+  color: rgb(105, 105, 105)
+}
+
+.another_showmessage .chat_content{
+  background-color: rgb(194, 194, 194);
+  border-radius: 0px 15px 15px 15px
+}
+
+.my_showmessage .chat_content{
+  background-color: rgb(103, 199, 255);
+  border-radius: 15px 0px 15px 15px
+}
+.chat_info{
+  margin-bottom: 2.2px;
+}
