--- a/front-end/src/pages/homePage/postItem/postItem.css
+++ b/front-end/src/pages/homePage/postItem/postItem.css
@@ -43,6 +43,12 @@
   width: 100%;
 }
 
+.carousel video {
+  display: block;
+  width: 100%;
+  height: 280px;
+}
+
 .carousel img {
   display: block;
   width: 100%;
