Update create and get chat in view

--- a/front-end/src/pages/homePage/postItem/postItem.css
+++ b/front-end/src/pages/homePage/postItem/postItem.css
@@ -43,11 +43,11 @@
   width: 100%;
 }
 
-.carousel video {
+/* .carousel video {
   display: block;
   width: 100%;
   height: 280px;
-}
+} */
 
 .carousel img {
   display: block;
