--- a/front-end/src/pages/allUser/allUser.css
+++ b/front-end/src/pages/allUser/allUser.css
@@ -1,7 +1,7 @@
 .table_user{
     border-collapse: collapse;
     width: 100%;
-    margin-top: 30px; 
+    margin-top: 6.5rem; 
 }
 .table_user td,
 .table_user th{
