--- a/front-end/src/pages/detail/detailItem.css
+++ b/front-end/src/pages/detail/detailItem.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 70% repeat(1, 2fr);
     grid-gap: 2.5rem;
+    margin-top: 5.5rem
   }
 
   .detailItem-wrap .header {
