--- a/front-end/src/styles/chat.css
+++ b/front-end/src/styles/chat.css
@@ -1,9 +1,7 @@
 .chat {
     width: 100%;
     height: calc(100vh - 100px);
-    /* border: 1px solid rgb(170, 170, 170);
-    border-radius: 5px; */
-    margin-top: 15px
+    margin-top: 6.2rem
 }
 
 .chat_search{
