--- a/front-end/src/styles/chat.css
+++ b/front-end/src/styles/chat.css
@@ -52,6 +52,63 @@
   outline: none;
   background-color: #fff
 }
+
+.chat_input .file_upload{
+  position: relative;
+  margin: 0 10px;
+}
+
+.chat_input .file_upload #file{
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.show_media{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
+  grid-gap: 5px;
+  width: 100%;
+  height: 90px;
+  overflow: hidden;
+  place-items: center;
+  background-color: #ddd;
+  border-radius: 8px;
+  padding: 5px 5px;
+}
+
+.show_media #file_media{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  max-width: 85px;
+  max-height: 85px;
+}
+
+.show_media #file_media img, .show_media #file_media video{
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.show_media #file_media span{
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 2;
+  padding: 1px 7px;
+  margin: -4px -4px 0px 0px;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+  color: #fff;
+  background-color: rgb(59, 59, 59);
+  border-radius: 50px;
+}
+
+
 /* ------------------Chat Container----------------- */
 .chat_container{
   width: 100%;
@@ -91,14 +148,33 @@
 }
 
 .another_showmessage .chat_content{
-  background-color: rgb(194, 194, 194);
+  background-color: #ddd;
   border-radius: 0px 15px 15px 15px
 }
 
 .my_showmessage .chat_content{
-  background-color: rgb(134, 210, 255);
-  border-radius: 15px 0px 15px 15px
+  background-color: rgb(70, 70, 70);
+  border-radius: 15px 0px 15px 15px;
+  color: #fff;
 }
 .chat_info{
   margin-bottom: 2.2px;
+}
+/* ---------------------Message -------------------- */
+.my_text{
+  position: relative;
+}
+
+.my_text .fa-trash-alt{
+  position: absolute;
+  cursor: pointer;
+  top: 45%;
+  left: -15px;
+  font-size: 13.5px;
+  transform: translateY(-50%);
+  opacity: 0;
+}
+
+.my_text:hover .fa-trash-alt{
+  opacity: 1;
 }
